Refactored into modern java